# qbittorrent-review-queue

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  manifest  package-lock.json  package.json  pyproject.toml
.beads/: .gitignore  README.md  config.yaml  issues.jsonl  metadata.json
.beads/hooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
backend/app/: cleanup.py  config.py  history.py  main.py  media.py  paths.py  review.py  session_count.py  system_dialog.py  torrents.py  video_files.py
backend/app/qbt/: client.py
backend/tests/: test_api.py  test_config.py  test_history.py  test_qbt_client.py  test_review_workflow.py  test_torrents_and_paths.py
docs/: design.json  design.md  development.md  product.md  ui-mockups.md
docs/adr/: 0001-destructive-review-workflow.md  0002-local-settings-persistence.md  0003-vite-react-fastapi-local-run.md
docs/agent/: product.md  skills.md  testing.md  tools.md
docs/mockups/: index.html  iron-ledger.html  power-user.html  qbittorrent-theme.html  queue-control-redesign.html  review-workbench.html
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-05-23-local-qbittorrent-review-queue.md  (+1 more)
frontend/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  AppConnectionAndPanels.test.tsx  main.tsx  styles.css
scripts/: dev-all.sh
skills/: README.md
(+97 files in other folders)
